--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 TgCrypto
 pyrogram==1.4.16
-youtube-dl
+youtube-search-python
 youtube_search
 requests
-yt_dlp
+git+https://github.com/Sorrybabe/downloader
 ffmpeg
